# pl0-parser

./: .gitignore  AI.md  CMakeLists.txt  LICENSE  README.md  pl0.ebnf
examples/: complex.pl0  const.pl0  const_var.pl0  factorial.pl0  invalid_assign.pl0  primes.pl0  proc.pl0  simple.pl0  var.pl0
src/: ast.c  ast.h  main.c  options.c  options.h  parser.y  scanner.l  semantic.c  semantic.h  type_check.c  type_check.h
tests/: CMakeLists.txt  test-analysis.cpp  test-ast.cpp  test-lexer.cpp  test-parser.cpp
